# daily-salon-insights-api

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
.github/workflows/: deploy-demo.yml  deploy.yml
alembic/: env.py
alembic/versions/: e9aa6f64ae98_initial_business_schema.py
app/: __init__.py  main.py
app/api/: admin_days.py  admin_master.py  auth.py  cashier.py  deps.py  reports.py  router.py
app/cli/: __init__.py  seed.py
app/core/: config.py  errors.py  security.py  time.py
app/db/: session.py
app/models/: __init__.py  entities.py
app/schemas/: requests.py
app/services/: business.py  reports.py
tests/: conftest.py  test_acceptance_operations.py  test_acceptance_security.py  test_admin_master.py  test_core_workflow.py  test_reports.py  test_schema.py
