[project]
name = "salon-daily-sales-api"
version = "0.1.0"
description = "FastAPI backend for multi-branch salon daily sales tracking"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "argon2-cffi>=25.1.0",
  "fastapi>=0.116.0",
  "openpyxl>=3.1.5",
  "pydantic-settings>=2.10.0",
  "pyjwt>=2.10.1",
  "pymysql>=1.1.1",
  "sqlalchemy>=2.0.41",
  "tzdata>=2025.2",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
  "types-openpyxl>=3.1.5.20250602",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
